Completed the function of bringing heroes from the Marvel API Server by applying the module architecture. (Marvel API : https://developer.marvel.com)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,12 @@ hilt = "2.44.2"
 kotlin = "1.7.21"
 material = "1.7.0"
 navigation = "2.5.3"
+rxjava = "3.1.6"
+rxkotlin = "3.0.1"
+rxandroid = "3.0.2"
+retrofit = "2.9.0"
+okHttp = "5.0.0-alpha.11"
+glide = "4.12.0"
 
 junit = "4.13.2"
 
@@ -30,7 +36,21 @@ google-hilt-test = { module = "com.google.dagger:hilt-android-testing", version.
 androidx-test-junit = { module = "androidx.test.ext:junit", version = "1.1.5" }
 androidx-test-espresso = { module = "androidx.test.espresso:espresso-core", version = "3.5.1" }
 
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide"}
+
 junit = { module = "junit:junit", version.ref = "junit" }
+javax-inject = { module = "javax.inject:javax.inject", version = "1" }
+
+reactivex-rxjava = { module = "io.reactivex.rxjava3:rxjava", version.ref = "rxjava" }
+reactivex-rxkotlin = { module = "io.reactivex.rxjava3:rxkotlin", version.ref = "rxkotlin" }
+reactivex-rxandroid = { module = "io.reactivex.rxjava3:rxandroid", version.ref = "rxandroid" }
+
+squareup-retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+squareup-retrofit-gson-converter = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+squareup-retrofit-adapter-rxjava3 = { module = "com.squareup.retrofit2:adapter-rxjava3", version.ref = "retrofit" }
+squareup-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
+squareup-okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
@@ -41,3 +61,17 @@ android-application = { id = "com.android.application", version.ref = "gradlePlu
 android-library = { id = "com.android.library", version.ref = "gradlePlugin" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+
+[bundles]
+squareup = [
+    "squareup-retrofit",
+    "squareup-retrofit-gson-converter",
+    "squareup-retrofit-adapter-rxjava3",
+    "squareup-okhttp",
+    "squareup-okhttp-logging-interceptor"
+]
+reactivex = [
+    "reactivex-rxjava",
+    "reactivex-rxkotlin",
+    "reactivex-rxandroid"
+]
